--- a/briar-android/res/menu/blogs_blog_actions.xml
+++ b/briar-android/res/menu/blogs_blog_actions.xml
@@ -27,8 +27,7 @@
 		android:id="@+id/action_blog_delete"
 		android:icon="@drawable/action_delete_white"
 		android:title="@string/blogs_remove_blog"
-		android:visible="false"
-		app:showAsAction="never"
-		tools:visible="true"/>
+		android:enabled="false"
+		app:showAsAction="never"/>
 
 </menu>
