--- a/briar-android/res/layout/list_item_blog.xml
+++ b/briar-android/res/layout/list_item_blog.xml
@@ -18,7 +18,7 @@
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginTop="@dimen/margin_medium"/>
 
-	<TextView
+	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 		android:id="@+id/nameView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
