--- a/briar-android/res/layout/list_item_blog_post.xml
+++ b/briar-android/res/layout/list_item_blog_post.xml
@@ -50,7 +50,7 @@
 				android:padding="@dimen/margin_small"
 				android:src="@drawable/ic_repeat"/>
 
-			<TextView
+			<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 				android:id="@+id/bodyView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
