--- a/briar-android/res/layout/list_item_selectable_contact.xml
+++ b/briar-android/res/layout/list_item_selectable_contact.xml
@@ -34,7 +34,7 @@
 			android:layout_toRightOf="@+id/avatarView"
 			android:orientation="vertical">
 
-			<TextView
+			<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 				android:id="@+id/nameView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
