--- a/briar-android/res/values/dimens.xml
+++ b/briar-android/res/values/dimens.xml
@@ -47,6 +47,7 @@
 	<dimen name="blogs_avatar_comment_size">20dp</dimen>
 
 	<!-- Emoji -->
+	<dimen name="text_input_height">42dp</dimen>
 	<dimen name="conversation_item_body_text_size">16sp</dimen>
 	<dimen name="emoji_drawer_size">32sp</dimen>
 	<dimen name="emoji_drawer_indicator_height">2dp</dimen>
