--- a/briar-android/res/menu/navigation_drawer.xml
+++ b/briar-android/res/menu/navigation_drawer.xml
@@ -5,8 +5,12 @@
 	<group android:checkableBehavior="single">
 		<item
 			android:id="@+id/nav_btn_contacts"
-			android:icon="@drawable/ic_contacts_black_24dp"
+			android:icon="@drawable/ic_contacts"
 			android:title="@string/contact_list_button"/>
+		<item
+			android:id="@+id/nav_btn_groups"
+			android:icon="@drawable/ic_group"
+			android:title="@string/groups_button"/>
 		<item
 			android:id="@+id/nav_btn_forums"
 			android:icon="@drawable/ic_forums_black_24dp"
@@ -15,6 +19,9 @@
 			android:id="@+id/nav_btn_blogs"
 			android:icon="@drawable/blogs"
 			android:title="@string/blogs_button"/>
+	</group>
+
+	<group android:checkableBehavior="single">
 		<item
 			android:id="@+id/nav_btn_settings"
 			android:icon="@drawable/ic_settings_black_24dp"
