--- a/briar-android/res/layout/list.xml
+++ b/briar-android/res/layout/list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <org.briarproject.android.view.BriarRecyclerView
+	android:id="@+id/list"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/contactList"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:listitem="@layout/list_item_contact"/>
+	app:scrollToEnd="false"/>
