--- a/briar-android/res/layout/list_item_group.xml
+++ b/briar-android/res/layout/list_item_group.xml
@@ -14,12 +14,12 @@
 		android:layout_height="@dimen/listitem_picture_frame_size"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		android:layout_centerVertical="true"
+		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginTop="@dimen/listitem_horizontal_margin"/>
 
 	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
-		android:id="@+id/forumNameView"
+		android:id="@+id/nameView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentTop="true"
@@ -29,20 +29,34 @@
 		android:maxLines="2"
 		android:textColor="@color/briar_text_primary"
 		android:textSize="@dimen/text_size_medium"
-		tools:text="This is a name of a forum"/>
+		tools:text="This is a name of a Private Group"/>
 
-	<TextView
-		android:id="@+id/postCountView"
+	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
+		android:id="@+id/creatorView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/forumNameView"
+		android:layout_below="@+id/nameView"
+		android:layout_marginBottom="@dimen/margin_small"
 		android:layout_toEndOf="@+id/avatarView"
 		android:layout_toRightOf="@+id/avatarView"
-		android:paddingBottom="@dimen/listitem_horizontal_margin"
-		android:paddingTop="@dimen/margin_medium"
+		android:paddingTop="@dimen/margin_small"
 		android:textColor="@color/briar_text_secondary"
 		android:textSize="@dimen/text_size_small"
-		tools:text="1337 posts"/>
+		tools:text="Created by Santa Claus"/>
+
+	<TextView
+		android:id="@+id/messageCountView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/creatorView"
+		android:layout_marginBottom="@dimen/margin_small"
+		android:layout_toEndOf="@+id/avatarView"
+		android:layout_toRightOf="@+id/avatarView"
+		android:paddingTop="@dimen/margin_small"
+		android:textColor="@color/briar_text_secondary"
+		android:textSize="@dimen/text_size_small"
+		tools:text="1337 messages"
+		tools:visibility="visible"/>
 
 	<TextView
 		android:id="@+id/dateView"
@@ -50,20 +64,44 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentEnd="true"
 		android:layout_alignParentRight="true"
-		android:layout_below="@+id/forumNameView"
+		android:layout_below="@+id/creatorView"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
-		android:paddingBottom="@dimen/listitem_horizontal_margin"
-		android:paddingTop="@dimen/margin_medium"
+		android:paddingTop="@dimen/margin_small"
 		android:textColor="@color/briar_text_secondary"
 		android:textSize="@dimen/text_size_small"
-		tools:text="Dec 24"/>
+		tools:text="3 weeks ago, 12:00"
+		tools:visibility="visible"/>
+
+	<TextView
+		android:id="@+id/statusView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/messageCountView"
+		android:layout_toEndOf="@+id/avatarView"
+		android:layout_toRightOf="@+id/avatarView"
+		android:paddingTop="@dimen/margin_small"
+		android:textColor="@color/briar_text_tertiary"
+		tools:text="@string/groups_group_is_empty"/>
+
+	<Button
+		android:id="@+id/removeButton"
+		style="@style/BriarButtonFlat.Negative"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignBottom="@+id/divider"
+		android:layout_alignParentRight="true"
+		android:layout_toRightOf="@+id/statusView"
+		android:text="@string/groups_remove"
+		tools:visibility="gone"/>
 
 	<View
+		android:id="@+id/divider"
 		style="@style/Divider.ForumList"
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		android:layout_below="@+id/postCountView"/>
+		android:layout_below="@+id/statusView"
+		android:layout_marginTop="@dimen/listitem_horizontal_margin"/>
 
 </RelativeLayout>
 
