--- a/briar-android/res/layout/activity_forum.xml
+++ b/briar-android/res/layout/activity_forum.xml
@@ -11,7 +11,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="1"
-		app:scrollToEnd="false"/>
+		app:scrollToEnd="false"
+		app:emptyText="@string/no_forum_posts"/>
 
 	<org.briarproject.android.view.TextInputView
 		android:id="@+id/text_input_container"
