--- a/briar-android/res/layout/activity_forum.xml
+++ b/briar-android/res/layout/activity_forum.xml
@@ -7,12 +7,12 @@
 	android:orientation="vertical">
 
 	<org.briarproject.android.view.BriarRecyclerView
-		android:id="@+id/forum_discussion_list"
+		android:id="@+id/list"
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
 		android:layout_weight="1"
-		app:scrollToEnd="false"
-		app:emptyText="@string/no_forum_posts"/>
+		app:emptyText="@string/no_forum_posts"
+		app:scrollToEnd="false"/>
 
 	<org.briarproject.android.view.TextInputView
 		android:id="@+id/text_input_container"
