Show join messages properly in the threaded conversation

--- a/briar-android/res/layout/list_item_thread.xml
+++ b/briar-android/res/layout/list_item_thread.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+	android:id="@+id/layout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/forum_cell"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="horizontal">
+	android:orientation="horizontal"
+	android:baselineAligned="false">
 
 	<RelativeLayout
 		android:layout_width="wrap_content"
