--- a/briar-android/res/values/attrs.xml
+++ b/briar-android/res/values/attrs.xml
@@ -11,6 +11,7 @@
 			<enum name="normal" value="0"/>
 			<enum name="reblogger" value="1"/>
 			<enum name="commenter" value="2"/>
+			<enum name="list" value="3"/>
 		</attr>
 	</declare-styleable>
 
