Improve QR code workflow slightly
* Improve wording so contacts know they need meet up to scan
  and scan each other's codes
* Use consistent progress bar styles

--- a/briar-android/res/layout/fragment_keyagreement_qr.xml
+++ b/briar-android/res/layout/fragment_keyagreement_qr.xml
@@ -33,9 +33,9 @@
 				android:visibility="invisible">
 
 				<ProgressBar
+					style="?android:attr/progressBarStyleLarge"
 					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingTop="@dimen/margin_large"/>
+					android:layout_height="wrap_content"/>
 
 				<TextView
 					android:id="@+id/connect_status"
@@ -47,24 +47,25 @@
 			</LinearLayout>
 		</FrameLayout>
 
-		<RelativeLayout
+		<FrameLayout
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 			android:layout_weight="1"
 			android:background="@android:color/white">
 
 			<ProgressBar
+				style="?android:attr/progressBarStyleLarge"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_centerInParent="true"
-				android:paddingTop="@dimen/margin_large"/>
+				android:layout_gravity="center"/>
 
 			<ImageView
 				android:id="@+id/qr_code"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:scaleType="fitCenter"/>
-		</RelativeLayout>
+				android:scaleType="fitCenter"
+				android:layout_gravity="center"/>
+		</FrameLayout>
 	</LinearLayout>
 
 	<RelativeLayout
@@ -79,17 +80,17 @@
 			style="?android:attr/progressBarStyleLarge"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_centerInParent="true"/>
+			android:layout_above="@+id/title_progress_bar"
+			android:layout_centerHorizontal="true"/>
 
 		<TextView
 			android:id="@+id/title_progress_bar"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_below="@id/progress_bar"
+			android:layout_centerInParent="true"
 			android:gravity="center"
 			android:paddingTop="@dimen/margin_large"
-			tools:text="progress bar title"
-			/>
+			tools:text="@string/waiting_for_contact_to_scan"/>
 	</RelativeLayout>
 
 </FrameLayout>
