--- a/briar-android/res/layout/fragment_keyagreement_id.xml
+++ b/briar-android/res/layout/fragment_keyagreement_id.xml
@@ -21,7 +21,6 @@
 			android:id="@+id/imageView"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/margin_xlarge"
 			android:adjustViewBounds="true"
 			android:scaleType="fitCenter"
 			android:src="@drawable/qr_code_intro"
@@ -42,7 +41,8 @@
 				android:layout_height="wrap_content"
 				android:adjustViewBounds="true"
 				android:padding="@dimen/margin_medium"
-				android:src="@drawable/qr_code_explanation"/>
+				android:src="@drawable/qr_code_explanation"
+				android:contentDescription="@string/face_to_face"/>
 
 			<TextView
 				style="@style/BriarTextBody"
