Show Notifications for Group Messages

--- a/briar-android/res/xml/settings.xml
+++ b/briar-android/res/xml/settings.xml
@@ -65,6 +65,12 @@
 
 		<CheckBoxPreference
 			android:defaultValue="true"
+			android:key="pref_key_notify_group_messages"
+			android:persistent="false"
+			android:title="@string/notify_group_messages_setting"/>
+
+		<CheckBoxPreference
+			android:defaultValue="true"
 			android:key="pref_key_notify_forum_posts"
 			android:persistent="false"
 			android:title="@string/notify_forum_posts_setting"/>
