Add UI for revealing contacts within a private group

--- a/briar-android/res/menu/group_actions.xml
+++ b/briar-android/res/menu/group_actions.xml
@@ -16,6 +16,12 @@
 		app:showAsAction="ifRoom"/>
 
 	<item
+		android:id="@+id/action_group_reveal"
+		android:icon="@drawable/ic_visibility_white"
+		android:title="@string/groups_reveal_contacts"
+		app:showAsAction="ifRoom"/>
+
+	<item
 		android:id="@+id/action_group_invite"
 		android:icon="@drawable/ic_add_white"
 		android:title="@string/groups_invite_members"
