--- a/briar-android/res/layout/list_item_group_join_notice.xml
+++ b/briar-android/res/layout/list_item_group_join_notice.xml
@@ -21,7 +21,6 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/top_divider"
 		android:layout_marginBottom="@dimen/margin_small"
-		android:layout_marginLeft="@dimen/margin_medium"
 		android:layout_marginRight="@dimen/margin_medium"
 		android:layout_marginTop="@dimen/margin_medium"
 		android:textColor="@color/briar_text_secondary"
@@ -46,34 +45,34 @@
 		android:layout_alignEnd="@+id/text"
 		android:layout_alignRight="@+id/text"
 		android:layout_below="@+id/text"
-		android:layout_marginBottom="@dimen/margin_small"
 		android:layout_toRightOf="@+id/icon"
 		android:gravity="center_vertical"
+		android:minHeight="24dp"
 		android:textColor="@color/briar_text_secondary"
 		android:textIsSelectable="true"
-		android:textSize="@dimen/text_size_small"
+		android:textSize="@dimen/text_size_tiny"
 		android:textStyle="italic"
 		tools:text="@string/groups_reveal_visible_revealed_by_contact"/>
 
 	<org.briarproject.android.view.AuthorView
 		android:id="@+id/author"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_height="@dimen/button_size"
 		android:layout_alignLeft="@+id/text"
 		android:layout_below="@+id/info"
-		android:paddingBottom="@dimen/margin_medium"
+		android:gravity="center"
 		app:persona="commenter"/>
 
 	<Button
 		android:id="@+id/optionsButton"
-		style="@style/BriarButtonFlat.Positive"
+		style="@style/BriarButtonFlat.Positive.Tiny"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignBottom="@+id/author"
 		android:layout_alignEnd="@+id/text"
 		android:layout_alignRight="@+id/text"
+		android:layout_alignTop="@+id/author"
 		android:layout_toRightOf="@+id/author"
-		android:gravity="right"
+		android:gravity="right|center_vertical"
 		android:text="@string/options"/>
 
 </RelativeLayout>
