--- a/briar-android/res/layout/list_item_group_member.xml
+++ b/briar-android/res/layout/list_item_group_member.xml
@@ -1,29 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:layout_marginEnd="@dimen/listitem_horizontal_margin"
 	android:layout_marginLeft="@dimen/listitem_horizontal_margin"
-	android:layout_marginRight="@dimen/listitem_horizontal_margin"
 	android:layout_marginStart="@dimen/listitem_horizontal_margin"
-	android:orientation="horizontal"
-	android:paddingBottom="@dimen/margin_medium"
 	android:paddingTop="@dimen/margin_medium">
 
 	<org.briarproject.android.view.AuthorView
 		android:id="@+id/authorView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_alignParentTop="true"
+		android:layout_marginBottom="@dimen/margin_small"
+		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		app:persona="list"/>
 
 	<ImageView
-		android:id="@+id/sharingView"
+		android:id="@+id/icon"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:src="@drawable/ic_sharing"
-		android:layout_marginLeft="@dimen/margin_medium"
-		android:contentDescription="@string/forum_invitation_already_sharing"/>
+		android:layout_below="@+id/authorView"
+		android:layout_marginLeft="@dimen/listitem_group_member_indentation"
+		android:layout_marginRight="@dimen/margin_small"
+		android:contentDescription="@string/forum_invitation_already_sharing"
+		android:src="@drawable/ic_visibility"/>
 
-</LinearLayout>
+	<TextView
+		android:id="@+id/info"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/authorView"
+		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		android:layout_toRightOf="@+id/icon"
+		android:gravity="center_vertical"
+		android:minHeight="24dp"
+		android:textColor="@color/briar_text_secondary"
+		android:textIsSelectable="true"
+		android:textSize="@dimen/text_size_tiny"
+		android:textStyle="italic"
+		tools:text="@string/groups_reveal_visible_revealed_by_us"/>
+
+	<View
+		android:id="@+id/divider"
+		style="@style/Divider.ContactList"
+		android:layout_below="@+id/info"
+		android:layout_marginLeft="@dimen/listitem_group_member_indentation"
+		android:layout_marginTop="@dimen/margin_medium"/>
+
+</RelativeLayout>
