--- a/briar-android/res/layout/splash.xml
+++ b/briar-android/res/layout/splash.xml
@@ -10,6 +10,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true" 
-		android:layout_margin="@dimen/margin_xxlarge" />
+		android:layout_margin="@dimen/margin_xxlarge"
+		android:contentDescription="@string/app_name"/>
 
 </RelativeLayout>
