--- a/briar-android/res/layout/activity_plain.xml
+++ b/briar-android/res/layout/activity_plain.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<android.support.v7.widget.Toolbar
-		android:id="@+id/toolbar"
-		style="@style/BriarToolbar"
+	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="?attr/colorPrimary"
-		android:minHeight="?attr/actionBarSize"
-		/>
+		android:layout_height="wrap_content">
+
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			style="@style/BriarToolbar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"/>
+
+	</android.support.design.widget.AppBarLayout>
 
 	<FrameLayout
+		android:id="@+id/content_fragment"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-
-		<FrameLayout
-			android:id="@+id/content_fragment"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:background="@color/window_background"/>
-
-	</FrameLayout>
+		android:layout_height="match_parent"
+		android:background="@color/window_background"/>
 
 </LinearLayout>
