--- a/briar-android/res/layout/activity_with_loading.xml
+++ b/briar-android/res/layout/activity_with_loading.xml
@@ -6,14 +6,17 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical">
 
-	<android.support.v7.widget.Toolbar
-		android:id="@+id/toolbar"
-		style="@style/BriarToolbar"
+	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="?attr/colorPrimary"
-		android:minHeight="?attr/actionBarSize"
-		/>
+		android:layout_height="wrap_content">
+
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			style="@style/BriarToolbar"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"/>
+
+	</android.support.design.widget.AppBarLayout>
 
 	<FrameLayout
 		android:layout_width="match_parent"
