--- a/briar-android/src/main/res/layout/activity_nav_drawer.xml
+++ b/briar-android/src/main/res/layout/activity_nav_drawer.xml
@@ -6,8 +6,30 @@
 	android:layout_height="match_parent">
 
 	<!-- The first child(root) is the content view -->
-	<include
-		layout="@layout/activity_with_loading"/>
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+
+		<android.support.design.widget.AppBarLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content">
+
+			<android.support.v7.widget.Toolbar
+				android:id="@+id/toolbar"
+				style="@style/BriarToolbar"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
+
+		</android.support.design.widget.AppBarLayout>
+
+		<FrameLayout
+			android:id="@+id/fragmentContainer"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:background="@color/window_background"/>
+
+	</LinearLayout>
 
 	<!-- The second child is the menu -->
 	<include
