--- a/briar-android/src/main/res/layout/activity_plain.xml
+++ b/briar-android/src/main/res/layout/activity_plain.xml
@@ -18,7 +18,7 @@
 	</android.support.design.widget.AppBarLayout>
 
 	<FrameLayout
-		android:id="@+id/content_fragment"
+		android:id="@+id/fragmentContainer"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:background="@color/window_background"/>
