--- a/briar-android/src/main/res/layout/fragment_reblog.xml
+++ b/briar-android/src/main/res/layout/fragment_reblog.xml
@@ -4,6 +4,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="@color/window_background"
 	android:orientation="vertical">
 
 	<ScrollView
@@ -41,7 +42,7 @@
 		android:layout_height="wrap_content"
 		android:gravity="bottom"
 		app:buttonText="@string/blogs_reblog_button"
-		app:maxLines="5"
-		app:hint="@string/blogs_reblog_comment_hint"/>
+		app:hint="@string/blogs_reblog_comment_hint"
+		app:maxLines="5"/>
 
 </LinearLayout>
