--- a/briar-android/src/main/res/layout/list_item_contact_small.xml
+++ b/briar-android/src/main/res/layout/list_item_contact_small.xml
@@ -5,28 +5,38 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
-	android:paddingBottom="@dimen/margin_small"
-	android:paddingTop="@dimen/margin_small">
+	android:paddingBottom="@dimen/margin_medium"
+	android:paddingTop="@dimen/margin_medium">
 
 	<de.hdodenhof.circleimageview.CircleImageView
 		android:id="@+id/avatarView"
 		style="@style/BriarAvatar"
 		android:layout_width="@dimen/listitem_picture_size_small"
 		android:layout_height="@dimen/listitem_picture_size_small"
+		android:layout_gravity="center_vertical"
 		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
 		android:layout_marginStart="@dimen/listitem_horizontal_margin"
 		tools:src="@drawable/ic_launcher"/>
 
 	<org.thoughtcrime.securesms.components.emoji.EmojiTextView
 		android:id="@+id/nameView"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center_vertical"
-		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
-		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginStart="@dimen/margin_medium"
+		android:layout_weight="1"
 		android:maxLines="2"
 		android:textColor="@color/briar_text_primary"
 		android:textSize="@dimen/text_size_medium"
 		tools:text="This is a name of a contact"/>
+
+	<ImageView
+		android:id="@+id/bulbView"
+		android:layout_width="@dimen/listitem_horizontal_margin"
+		android:layout_height="@dimen/listitem_horizontal_margin"
+		android:layout_gravity="center_vertical"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		tools:src="@drawable/contact_connected"/>
 
 </LinearLayout>
