--- a/briar-android/src/main/res/layout/list_item_group_member.xml
+++ b/briar-android/src/main/res/layout/list_item_group_member.xml
@@ -13,17 +13,41 @@
 		android:id="@+id/authorView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_alignParentLeft="true"
 		android:layout_alignParentTop="true"
 		android:layout_marginBottom="@dimen/margin_small"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		android:layout_toLeftOf="@+id/bulbView"
 		app:persona="list"/>
+
+	<ImageView
+		android:id="@+id/bulbView"
+		android:layout_width="16dp"
+		android:layout_height="16dp"
+		android:layout_alignBottom="@+id/authorView"
+		android:layout_alignParentEnd="true"
+		android:layout_alignParentRight="true"
+		android:layout_alignTop="@+id/authorView"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
+		tools:src="@drawable/contact_connected"/>
+
+	<TextView
+		android:id="@+id/creatorView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/authorView"
+		android:layout_marginBottom="@dimen/margin_small"
+		android:layout_marginLeft="@dimen/listitem_group_member_indentation"
+		android:text="@string/groups_member_created_you"
+		android:textColor="@color/briar_text_secondary"
+		tools:visibility="visible"/>
 
 	<ImageView
 		android:id="@+id/icon"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/authorView"
+		android:layout_below="@+id/creatorView"
 		android:layout_marginLeft="@dimen/listitem_group_member_indentation"
 		android:layout_marginRight="@dimen/margin_small"
 		android:contentDescription="@string/forum_invitation_already_sharing"
@@ -33,7 +57,7 @@
 		android:id="@+id/info"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/authorView"
+		android:layout_below="@+id/creatorView"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_toRightOf="@+id/icon"
