--- a/briar-android/src/main/res/layout/fragment_blog.xml
+++ b/briar-android/src/main/res/layout/fragment_blog.xml
@@ -6,5 +6,6 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="@color/window_background"
 	app:scrollToEnd="false"
 	tools:context=".android.blog.BlogActivity"/>
