--- a/briar-android/src/main/res/layout/activity_dev_report.xml
+++ b/briar-android/src/main/res/layout/activity_dev_report.xml
@@ -11,17 +11,7 @@
 		android:orientation="vertical"
 		tools:context=".android.reporting.DevReportActivity">
 
-		<android.support.design.widget.AppBarLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-
-			<android.support.v7.widget.Toolbar
-				android:id="@+id/toolbar"
-				style="@style/BriarToolbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"/>
-
-		</android.support.design.widget.AppBarLayout>
+		<include layout="@layout/toolbar"/>
 
 		<RelativeLayout
 			android:layout_width="match_parent"
