--- a/briar-android/src/main/res/layout/activity_nav_drawer.xml
+++ b/briar-android/src/main/res/layout/activity_nav_drawer.xml
@@ -2,8 +2,10 @@
 <android.support.v4.widget.DrawerLayout
 	android:id="@+id/drawer_layout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	tools:context=".android.navdrawer.NavDrawerActivity">
 
 	<!-- The first child(root) is the content view -->
 	<LinearLayout
@@ -11,17 +13,7 @@
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 
-		<android.support.design.widget.AppBarLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-
-			<android.support.v7.widget.Toolbar
-				android:id="@+id/toolbar"
-				style="@style/BriarToolbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"/>
-
-		</android.support.design.widget.AppBarLayout>
+		<include layout="@layout/toolbar"/>
 
 		<FrameLayout
 			android:id="@+id/fragmentContainer"
